--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -894,7 +894,7 @@
     "message": "P̂áĝé îśn̂’t́ b̂ĺôćk̂éd̂ f́r̂óm̂ ín̂d́êx́îńĝ"
   },
   "lighthouse-core/audits/seo/json-ld.js | description": {
-    "message": "Ŝt́r̂úĉt́ûŕêd́ d̂át̂á ĉón̂t́âín̂ś r̂íĉh́ m̂ét̂ád̂át̂á âb́ôút̂ á ŵéb̂ ṕâǵê. T́ĥé d̂át̂á îś ûśêd́ îń ŝéâŕĉh́ r̂éŝúl̂t́ŝ án̂d́ ŝóĉíâĺ ŝh́âŕîńĝ. Ín̂v́âĺîd́ m̂ét̂ád̂át̂á ŵíl̂ĺ âf́f̂éĉt́ ĥóŵ t́ĥé p̂áĝé âṕp̂éâŕŝ ín̂ t́ĥéŝé ĉón̂t́êx́t̂ś. T̂h́îś âúd̂ít̂ ćûŕr̂én̂t́l̂ý v̂ál̂íd̂át̂éŝ á ŝúb̂śêt́ ôf́ ĴŚÔŃ-L̂D́ r̂úl̂éŝ. Śêé âĺŝó t̂h́ê [Śt̂ŕûćt̂úr̂éd̂ D́ât́â T́êśt̂ín̂ǵ T̂óôĺ](https://search.google.com/structured-data/testing-tool/) t̂ó v̂ál̂íd̂át̂é ôt́ĥér̂ t́ŷṕêś ôf́ ŝt́r̂úĉt́ûŕêd́ d̂át̂á."
+    "message": "T̂h́îś âúd̂ít̂ ćûŕr̂én̂t́l̂ý v̂ál̂íd̂át̂éŝ á ŝúb̂śêt́ ôf́ ĴŚÔŃ-L̂D́ r̂úl̂éŝ úŝéd̂ ín̂ śêár̂ćĥ én̂ǵîńêś. Ŝéê ál̂śô t́ĥé [Ŝt́r̂úĉt́ûŕêd́ D̂át̂á T̂éŝt́îńĝ T́ôól̂](https://search.google.com/structured-data/testing-tool/) t́ô v́âĺîd́ât́ê ót̂h́êŕ t̂ýp̂éŝ óf̂ śt̂ŕûćt̂úr̂éd̂ d́ât́â."
   },
   "lighthouse-core/audits/seo/json-ld.js | displayValue": {
     "message": "{invalidSnippetCount, plural,\n    =1 {# îńv̂ál̂íd̂ śn̂íp̂ṕêt́}\n    other {# îńv̂ál̂íd̂ śn̂íp̂ṕêt́ŝ}\n    }"
